# mono

./: .gitignore  LICENSE  README.md  docker-compose.yml
lkjagent/: .gitignore  ARCHITECTURE.md  CMakeLists.txt  Dockerfile  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUCCESS.md  LLM-INTEGRATION-COMPLETE.md  MEMORY-IMPLEMENTATION-COMPLETE.md  Makefile  PROMPTS-QUALITY-EXCELLENCE.md  README.md  README_new.md  STATUS.md  TODO-01-CORE-INFRASTRUCTURE.md  TODO-02-MEMORY-CONTEXT.md  TODO-03-LLM-INTEGRATION.md  TODO-04-STATE-AGENT.md  TODO-05-CONFIG-PERSISTENCE.md  TODO-06-UTILITIES.md  TODO-07-BUILD-TESTING.md  TODO-08-INTEGRATION-PRODUCTION.md  TODO.md  USAGE.md  agent_memory.json  config.json  docker-compose.yml  llm_integration_demo.c  llm_simple_demo  llm_simple_demo.c  package-lock.json  package.json  prompt.txt  test-comprehensive.js  test-enhanced-ls-output.js  test-framework.js  test-integration.js  test-ls-logger.js  test-mixed-content.js  test-prompt.js  test-xml-prompt.js  (+6 more)
lkjagent/data/: config.json  context_keys.json  data.json  log.json  memory.json  prompt.json  storage.json  system.txt
lkjagent/docs/: API_REFERENCE.md  ARCHITECTURE.md  CODING_STYLE_PRESERVATION.md  COMPLETE_PROJECT_ANALYSIS.md  CONFIGURATION.md  DEVELOPER_GUIDE.md  DEVELOPMENT_GUIDE.md  DOCUMENTATION.md  INDEX.md  PROJECT_SUMMARY.md  README.md  REWRITE_DEVELOPMENT_PROMPTS.md  REWRITE_TODO.md  TAGGED_MEMORY_DESIGN.md  agent-philosophy.md  api-reference.md  architecture.md  build-run.md  coding-style.md  configuration-schemas.md  configuration.md  data-models.md  deployment.md  development.md  (+11 more)
(+440 files in other folders)
